# simplewalker

./: .gitignore  CMakeLists.txt  README.md  calibrate.py  dynamics.py  kinematics.py  makefile  motionController.py  motionPlanner.py  motorControl.py  pyproject.toml  sensorReader.py  showRobot.py  simplewalker.cpp  testLeg.py  testMotor.py
.github/workflows/: build-simplewalker-microcontroller.yml  build-simplewalker.yml  calibrate-motor.yml
calibrate/: calibrate.ipynb  calibrate.py  calibrate_cli.py  interactive_calibrate.py  measure_motor_angle_manually.cpp  runMotorCalibration.py
communication/: CMakeLists.txt  comm_serial.cpp  comm_serial.hpp  comm_tcp.cpp  comm_tcp.hpp  communication.cpp  communication.hpp  communication_timer.hpp  maincomp_comm.cpp  maincomp_comm.hpp  messages.h
display/: CMakeLists.txt  baseReceiver.py  convenientLogger.hpp  displayState.py  graph_log.py  logReader.py  logger.cpp  logger.hpp  remoteState.py  settings.cpp  settings.hpp
mainsrc/: convenientLogger.hpp  coordinates.hpp  logger.cpp  logger.hpp  monitor_controller.cpp  monitor_only.cpp  sensorBoss.cpp  sensorBoss.hpp  simplewalker.cpp  walkerUtils.cpp  walkerUtils.hpp  walkertypes.h
microcontroller/: ADC_reader.cpp  ADC_reader.hpp  CMakeLists.txt  IMU_main.cpp  calibrateMotor.cpp  controller_info.cpp  controller_info.hpp  controller_main.cpp  hardwareTest.cpp  memory_util.h  micro_parameters.h  motor_IO.cpp  motor_IO.hpp  motor_control.cpp  motor_control.hpp  motor_output.cpp  motor_output.hpp  motors.cpp  motors.hpp  pico_comm.cpp  pico_comm.hpp  sensorReader.cpp  sensorReader.hpp  simplewalker_motors.hpp  testMotor.cpp
microcontroller/scripts/: load_pico.sh
microcontroller/sensors/: IMUContext.cpp  IMUContext.h  IMU_errcheck.cpp  IMU_errcheck.h
old/: motionController.py  motorControl.py  sensorReader.py
physics/: leg_kinematics.cpp  leg_kinematics.hpp  rotation.cpp  rotation.hpp
sensors/: collect_sensor_cal_data.cpp  sensorAnalysis.py  sensorBoss.cpp  sensorBoss.hpp  sensor_data.h
settings/: localize_test_settings.xml  settings.xml
state_estimation/: CMakeLists.txt  makefile  robot_state.cpp  robot_state.hpp  state_estimation.cpp  state_estimation.hpp  state_prediction.cpp  state_prediction.hpp  test_localization.cpp  test_state_estimation.cpp
test/: CMakeLists.txt  jacobian_test_analysis.py  jacobian_tests.cpp  logReader_unittest.py  sensorAnalysis_unittest.py  testLeg.py  testMotor.py  test_localization.cpp  test_utils.cpp  test_utils.hpp  unittest_basic_communication.cpp  unittests.cpp
test/unittests/: logReader_unittest.py  sensorAnalysis_unittest.py  unittest_basic_communication.cpp  unittest_leg_kinematics.cpp  unittest_rotation.cpp  unittest_settings.cpp  unittest_state_prediction.cpp  unittest_walkerUtils.cpp
